--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,11 @@
 {%- block extrahead %}
 <meta name="sourcename" content="{{ sourcename }}" />
 
-<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script><script type="text/javascript">if(!wcs_add) var wcs_add = {};wcs_add["wa"] = "bc1744d24abe20";wcs_do();</script>
+<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+<script type="text/javascript">
+if(!wcs_add) var wcs_add = {};
+wcs_add["wa"] = "c37aaa94b3c540";
+wcs_do();
+</script>
 
 {% endblock %}
